--- a/login.html
+++ b/login.html
@@ -4,19 +4,10 @@
   <meta charset="UTF-8">
   <title>Login - Sistema Igreja</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js"></script>
-  <script type="module" src="./firebase-config.js"></script>
-
   <style>
     body {
       background: linear-gradient(135deg, #2c3e50, #3498db);
-      color: #fff;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -32,16 +23,9 @@
       width: 100%;
       max-width: 400px;
     }
-    .form-control {
-      margin-bottom: 15px;
-    }
-    .btn-primary {
-      width: 100%;
-    }
-    .error {
-      color: red;
-      margin-top: 10px;
-    }
+    .form-control { margin-bottom: 15px; }
+    .btn-primary { width: 100%; }
+    .error { color: red; margin-top: 10px; }
   </style>
 </head>
 <body>
@@ -49,7 +33,7 @@
   <div class="card">
     <h3 class="text-center mb-4">Login do Sistema</h3>
     <form id="loginForm">
-      <input type="email" id="email" class="form-control" placeholder="E-mail" required>
+      <input type="email" id="email" class="form-control" placeholder="E‑mail" required>
       <input type="password" id="password" class="form-control" placeholder="Senha" required>
       <button type="submit" class="btn btn-primary">Entrar</button>
       <div id="errorMsg" class="error"></div>
@@ -57,31 +41,30 @@
   </div>
 
   <script type="module">
-  import { firebaseConfig, auth } from "./firebase-config.js";
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-  import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+    import { firebaseConfig } from "./firebase-config.js";
 
-  // Inicializa o app e a autenticação (caso ainda não iniciado)
-  initializeApp(firebaseConfig);
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
 
-  const form = document.getElementById("loginForm");
-  const errorMsg = document.getElementById("errorMsg");
+    const form = document.getElementById("loginForm");
+    const errorMsg = document.getElementById("errorMsg");
 
-  form.addEventListener("submit", async (e) => {
-    e.preventDefault();
-    errorMsg.textContent = "";
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      errorMsg.textContent = "";
 
-    const email = document.getElementById("email").value.trim();
-    const password = document.getElementById("password").value;
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value;
 
-    try {
-      await signInWithEmailAndPassword(getAuth(), email, password);
-      window.location.href = "/cadastro/index.html";
-    } catch (error) {
-      errorMsg.textContent = "Erro: " + error.message;
-    }
-  });
-</script>
-
+      try {
+        await signInWithEmailAndPassword(auth, email, password);
+        window.location.href = "/cadastro/index.html"; // corrige o redirecionamento no GitHub Pages
+      } catch (err) {
+        errorMsg.textContent = "Erro: " + err.message;
+      }
+    });
+  </script>
 </body>
 </html>
