--- a/login.html
+++ b/login.html
@@ -4,28 +4,14 @@
   <meta charset="UTF-8">
   <title>Login - Sistema Igreja</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body {
-      background: linear-gradient(135deg, #2c3e50, #3498db);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
-    .card {
-      background-color: #fff;
-      color: #333;
-      border-radius: 8px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.2);
-      padding: 30px;
-      width: 100%;
-      max-width: 400px;
-    }
-    .form-control { margin-bottom: 15px; }
-    .btn-primary { width: 100%; }
-    .error { color: red; margin-top: 10px; }
+    body { background: linear-gradient(135deg, #2c3e50, #3498db); display: flex; align-items: center; justify-content: center; height: 100vh; margin:0; }
+    .card { background:#fff; color:#333; border-radius:8px; box-shadow:0 0 20px rgba(0,0,0,0.2); padding:30px; width:100%; max-width:400px; }
+    .form-control { margin-bottom:15px; }
+    .btn-primary { width:100%; }
+    .error { color:red; margin-top:10px; }
   </style>
 </head>
 <body>
@@ -43,10 +29,11 @@
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-    import { firebaseConfig } from "./firebase-config.js";
+    import { firebaseConfig, auth as exportedAuth } from "./firebase-config.js";
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
+    // Inicializa o Firebase
+    initializeApp(firebaseConfig);
+    const auth = exportedAuth; // usa instância exportada
 
     const form = document.getElementById("loginForm");
     const errorMsg = document.getElementById("errorMsg");
@@ -54,13 +41,12 @@
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
       errorMsg.textContent = "";
-
       const email = document.getElementById("email").value.trim();
       const password = document.getElementById("password").value;
 
       try {
         await signInWithEmailAndPassword(auth, email, password);
-        window.location.href = "/cadastro/index.html"; // corrige o redirecionamento no GitHub Pages
+        window.location.href = "/cadastro/index.html"; // caminho correto
       } catch (err) {
         errorMsg.textContent = "Erro: " + err.message;
       }
