--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="style.css">
   <!-- Biblioteca de máscara -->
   <script src="https://unpkg.com/imask"></script>
+  <script type="module" src="firebase-config.js"></script>
+  <script type="module" src="auth-guard.js"></script>
 </head>
 <body>
 
@@ -31,7 +33,7 @@
           <a class="nav-link" href="aniversariantes.html">Aniversariantes</a>
         </li>
         <li class="nav-item">
-          <button class="btn btn-outline-light ms-3" onclick="logout()">Sair</button>
+          <button id="logoutBtn" class="btn btn-outline-light ms-3" style="display:none;">Sair</button>
         </li>
       </ul>
     </div>
@@ -181,18 +183,14 @@
   <script type="module" src="app.js"></script>
   <script type="module" src="auth-guard.js"></script>
   <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-  import { getAuth, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-  import { firebaseConfig } from "./firebase-config.js";
-
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-
-  window.logout = function () {
-    signOut(auth).then(() => {
-      window.location.href = "login.html";
-    });
-  };
+  import { initializeAuthGuard, logout } from './auth-guard.js';
+  
+  // Inicializa o guarda de autenticação
+  initializeAuthGuard();
+  
+  // Configura o botão de logout
+  document.getElementById('logoutBtn')?.addEventListener('click', logout);
+    
 </script>
 
 </body>
