--- a/index.html
+++ b/index.html
@@ -9,36 +9,36 @@
   <link rel="stylesheet" href="style.css">
   <!-- Biblioteca de máscara -->
   <script src="https://unpkg.com/imask"></script>
-  <script type="module" src="firebase-config.js"></script>
-  <script type="module" src="auth-guard.js"></script>
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-  <div class="container">
-    <a class="navbar-brand" href="#">Cadastro da Igreja</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <!-- 🔹 SCRIPT DE VERIFICAÇÃO DE AUTENTICAÇÃO (NOVO) -->
+  <script type="module">
+    import { checkAuth } from './auth.js';
+    checkAuth();
+  </script>
 
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link active" href="index.html">Cadastro</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="listagem.html">Listagem</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="aniversariantes.html">Aniversariantes</a>
-        </li>
-        <li class="nav-item">
-          <button id="logoutBtn" class="btn btn-outline-light ms-3" style="display:none;">Sair</button>
-        </li>
-      </ul>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Cadastro da Igreja</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Cadastro</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="listagem.html">Listagem</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="aniversariantes.html">Aniversariantes</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
   <div class="container form-container my-4">
     <h2 class="text-center mb-6">Cadastro de Membro</h2>
@@ -56,7 +56,7 @@
       </div>
 
       <div class="form-grid">
-        <!-- Campo nome -->
+        <!-- Coluna 1 -->
         <div>
           <label for="nome" class="form-label required-field">Nome Completo</label>
           <div class="relative">
@@ -74,7 +74,7 @@
           </div>
         </div>
         
-        <!-- Campo endereço -->
+        <!-- Coluna 2 -->
         <div>
           <label for="endereco" class="form-label required-field">Endereço</label>
           <div class="relative">
@@ -110,7 +110,7 @@
             </div>
           </div>
 
-        <!-- Campo batismo -->
+        <!-- Coluna 1 -->
         <div>
           <label for="batismo" class="form-label required-field">Data de Batismo</label>
           <div class="relative">
@@ -119,7 +119,7 @@
           </div>
         </div>
 
-        <!-- Campo nascimento -->
+        <!-- Coluna 2 -->
         <div>
           <label for="nascimento" class="form-label required-field">Data de Nascimento</label>
           <div class="relative">
@@ -128,7 +128,7 @@
           </div>
         </div>
 
-        <!-- Campo função -->
+        <!-- Função (ocupa duas colunas em desktop) -->
         <div>
           <label for="funcao" class="form-label required-field">Função</label>
           <div class="relative">
@@ -181,17 +181,5 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="app.js"></script>
-  <script type="module" src="auth-guard.js"></script>
-  <script type="module">
-  import { initializeAuthGuard, logout } from './auth-guard.js';
-  
-  // Inicializa o guarda de autenticação
-  initializeAuthGuard();
-  
-  // Configura o botão de logout
-  document.getElementById('logoutBtn')?.addEventListener('click', logout);
-    
-</script>
-
 </body>
 </html>
