--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
           <li class="nav-item">
             <a class="nav-link" href="aniversariantes.html">Aniversariantes</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" id="logoutBtn">
+              <i class="fas fa-sign-out-alt"></i> Sair
+            </a>
+</li>
         </ul>
       </div>
     </div>
