--- a/aniversariantes.html
+++ b/aniversariantes.html
@@ -23,6 +23,12 @@
 </head>
 <body>
 
+  <!-- 🔹 SCRIPT DE VERIFICAÇÃO DE AUTENTICAÇÃO (NOVO) -->
+  <script type="module">
+    import { checkAuth } from './auth.js';
+    checkAuth();
+  </script>
+
   <!-- 🔹 Navbar fixa no topo -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="container">
