--- a/ficha.html
+++ b/ficha.html
@@ -20,6 +20,14 @@
   </style>
 </head>
 <body>
+
+  <!-- 🔹 SCRIPT DE VERIFICAÇÃO DE AUTENTICAÇÃO (NOVO) -->
+  <script type="module">
+    import { checkAuth } from './auth.js';
+    checkAuth();
+  </script>
+
+  
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
       <a class="navbar-brand" href="#">Cadastro Igreja</a>
