--- a/register.html
+++ b/register.html
@@ -2,55 +2,58 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Registrar Usuário</title>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js"></script>
-  <script type="module" src="/firebase-config.js"></script> <!-- seu arquivo de configuração -->
-  <style>
-    body { font-family: Arial, sans-serif; max-width: 400px; margin: 50px auto; }
-    input, button { width: 100%; margin: 10px 0; padding: 10px; }
-    .msg { margin-top: 10px; }
-  </style>
+  <title>Cadastrar Usuário</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+  <!-- VERIFICA SE É ADMIN (no início do body) -->
+  <script type="module">
+    import { checkAdminAuth } from './auth.js';
+    if (!await checkAdminAuth()) {
+      window.location.href = 'index.html';
+    }
+  </script>
 
-  <h2>Cadastro de Novo Usuário</h2>
-
-  <form id="registerForm">
-    <input type="email" id="email" placeholder="E-mail" required />
-    <input type="password" id="password" placeholder="Senha (mínimo 6 caracteres)" required />
-    <button type="submit">Cadastrar</button>
-  </form>
-
-  <p class="msg" id="mensagem"></p>
-
-  <p>Já tem conta? <a href="login.html">Entrar</a></p>
+  <div class="container mt-5" style="max-width: 500px;">
+    <h2 class="text-center mb-4">Cadastrar Novo Usuário</h2>
+    <form id="registerForm" class="card p-4 shadow">
+      <div class="mb-3">
+        <label for="fullName" class="form-label">Nome Completo</label>
+        <input type="text" id="fullName" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label for="username" class="form-label">Nome de Usuário</label>
+        <input type="text" id="username" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label for="password" class="form-label">Senha</label>
+        <input type="password" id="password" class="form-control" required>
+      </div>
+      <div class="mb-3 form-check">
+        <input type="checkbox" id="isAdmin" class="form-check-input">
+        <label for="isAdmin" class="form-check-label">É administrador?</label>
+      </div>
+      <button type="submit" class="btn btn-primary w-100">Cadastrar</button>
+    </form>
+  </div>
 
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-    import { firebaseConfig } from "./firebase-config.js";
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-
-    const form = document.getElementById("registerForm");
-    const mensagem = document.getElementById("mensagem");
-
-    form.addEventListener("submit", (e) => {
+    import { registerUser } from './users.js';
+    
+    document.getElementById('registerForm').addEventListener('submit', async (e) => {
       e.preventDefault();
-
-      const email = document.getElementById("email").value;
-      const senha = document.getElementById("password").value;
-
-      createUserWithEmailAndPassword(auth, email, senha)
-        .then((userCredential) => {
-          mensagem.textContent = "Usuário cadastrado com sucesso!";
-          form.reset();
-        })
-        .catch((error) => {
-          mensagem.textContent = "Erro: " + error.message;
-        });
+      try {
+        await registerUser(
+          document.getElementById('username').value,
+          document.getElementById('password').value,
+          document.getElementById('fullName').value,
+          document.getElementById('isAdmin').checked
+        );
+        alert('Usuário cadastrado com sucesso!');
+        document.getElementById('registerForm').reset();
+      } catch (error) {
+        alert(`Erro: ${error.message}`);
+      }
     });
   </script>
 </body>
