--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
  <!-- Script de autenticação (adicione no início do <body>) -->
 <script type="module">
   import { checkAuth } from './auth.js';
+  import { isUserAdmin } from './users.js'; // Adicione esta importação
   
-  // Verifica autenticação e atualiza a navbar
   document.addEventListener('DOMContentLoaded', async () => {
-    await checkAuth();
+    const user = await checkAuth();
+    
+    // Mostrar menu admin se o usuário for administrador
+    if (user && await isUserAdmin()) {
+      document.getElementById('adminMenuItem').style.display = 'block';
+    }
   });
 </script>
 
