--- a/register.html
+++ b/register.html
@@ -156,16 +156,18 @@
           <div class="card-body">
             <div class="table-responsive">
               <table class="table table-hover user-table">
-                <thead>
-                  <tr>
-                    <th>Nome</th>
-                    <th>Usuário</th>
-                    <th>Tipo</th>
-                    <th class="action-buttons">Ações</th>
-                  </tr>
-                </thead>
-                <tbody id="usersList"></tbody>
-              </table>
+  <thead>
+    <tr>
+      <th>Nome</th>
+      <th>Usuário</th>
+      <th>Tipo</th>
+      <th class="action-buttons">Ações</th>
+    </tr>
+  </thead>
+  <tbody id="usersList">
+    <!-- Linhas serão inseridas dinamicamente -->
+  </tbody>
+</table>
             </div>
           </div>
         </div>
