--- a/login.html
+++ b/login.html
@@ -86,6 +86,7 @@
     </div>
   </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bcryptjs/2.4.3/bcrypt.min.js"></script>
   <script type="module">
   import { loginUser } from './users.js';
 
