--- a/login.html
+++ b/login.html
@@ -133,6 +133,16 @@ document.addEventListener('DOMContentLoaded', () => {
   }
 });
 </script>
+  <!-- Adicione isso no final do <body>, ANTES do seu script type="module" -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bcryptjs/2.4.3/bcrypt.min.js"></script>
+<script>
+  // Garante que o bcrypt está globalmente disponível
+  window._bcrypt = window.bcrypt;
+  console.log('BCrypt carregado?', !!window._bcrypt);
+</script>
+
+<!-- Seu script module deve vir DEPOIS -->
+<script type="module" src="users.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
