--- a/aniversariantes.html
+++ b/aniversariantes.html
@@ -71,6 +71,7 @@
       <option value="11">Novembro</option>
       <option value="12">Dezembro</option>
     </select>
+  <button id="btn-exportar" class="btn btn-danger">Exportar PDF</button>
 
     <div id="lista-aniversariantes"></div>
   </div>
