--- a/aniversariantes.html
+++ b/aniversariantes.html
@@ -164,8 +164,8 @@
         "Julho", "Agosto", "Setembro", "Outubro", "Novembro", "Dezembro"
       ];
 
-      const igrejaNome = "Igreja Exemplo da Fé";
-      const textoIntro = "Segue abaixo a lista de aniversariantes do mês.";
+      const igrejaNome = "Ministério Internacional Nova Esperança";
+      const textoIntro = "Famílias vivendo na Graça e unção do Espírito";
       const mesNome = mesesNomes[mesSelecionado];
       const dataAtual = new Date().toLocaleDateString();
 
