--- a/aniversariantes.html
+++ b/aniversariantes.html
@@ -232,14 +232,23 @@
     });
 
     async function carregarImagem(url) {
-      const img = await fetch(url);
-      const blob = await img.blob();
-      return await new Promise((resolve) => {
-        const reader = new FileReader();
-        reader.onload = () => resolve(reader.result);
-        reader.readAsDataURL(blob);
-      });
-    }
+  const img = await new Promise((resolve) => {
+    const image = new Image();
+    image.crossOrigin = "anonymous";
+    image.onload = () => resolve(image);
+    image.src = url;
+  });
+
+  // Reduz para 50x50 px usando canvas
+  const canvas = document.createElement("canvas");
+  canvas.width = 50;
+  canvas.height = 50;
+  const ctx = canvas.getContext("2d");
+  ctx.drawImage(img, 0, 0, 50, 50);
+
+  return canvas.toDataURL("image/jpeg", 0.5); // qualidade 50%
+}
+
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
